--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "bootstrap": "^5.3.0",
+    "enzyme": "^3.11.0",
     "firebase": "^9.22.2",
     "i18next": "^22.5.1",
+    "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-localstorage-mock": "^2.4.26",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-router-dom": "^6.12.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-star-ratings": "^2.3.0",
     "web-vitals": "^2.1.4"
@@ -42,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme-adapter-react-16": "^1.15.7"
   }
 }
